2005-10-20  Tomas Mraz	<t8m@centrum.cz>

	* configure.in: Added check for xauth binary and --with-xauth option.
	* config.h.in: Added configurable PAM_PATH_XAUTH.
	* modules/pam_xauth/README,
	modules/pam_xauth/pam_xauth.8: Document where xauth is looked for.
	* modules/pam_xauth/pam_xauth.c (pam_sm_open_session): Implement 
	searching xauth binary on multiple places.
	(run_coprocess): Don't use execvp as it can be a security risk.

2005-10-04  Steve Langasek  <vorlon@debian.org>

	* libpam/include/security/pam_malloc.h,
	libpam/include/security/pam_modules.h: Declare public header
	files extern "C" so that they are C++-safe.

2005-10-02  Dmitry V. Levin  <ldv@altlinux.org>
	    Steve Langasek  <vorlon@debian.org>

	Cleanup gratuitous use of strdup().
	Fix "missing argument" checks.

	* modules/pam_env/pam_env.c (_pam_parse): Add const qualifier
	to conffile and envfile arguments.  Do not use x_strdup() for
	conffile and envfile initialization.  Fix "missing argument"
	checks.
	(_parse_config_file): Take conffile argument of type "const char *"
	instead of "char **".  Do not free conffile.
	(_parse_env_file): Take env_file argument of type "const char *"
	instead of "char **".  Do not free env_file.
	(pam_sm_setcred): Add const qualifier to conf_file and env_file.
	Pass conf_file and env_file to _parse_config_file() and
	_parse_env_file() by value.
	(pam_sm_open_session): Likewise.

	* modules/pam_ftp/pam_ftp.c (_pam_parse): Add const qualifier to
	users argument.  Do not use x_strdup() for users initialization.
	(lookup):  Add const qualifier to list argument.
	(pam_sm_authenticate): Add const qualifier to users argument.

	* modules/pam_mail/pam_mail.c (_pam_parse): Add const qualifier
	to maildir argument.  Do not use x_strdup() for maildir
	initialization.  Fix "missing argument" check.
	(get_folder): Take path_mail argument of type "const char *"
	instead of "char **".  Do not free path_mail.
	(_do_mail): Add const qualifier to path_mail argument.